--- a/src/App.scss
+++ b/src/App.scss
@@ -36,3 +36,11 @@ nav{
         }
     }
 }
+
+.cv-exapmle{
+    display: flex;
+    flex-wrap: wrap;
+    background-color: #f9f9f9;
+    margin-bottom: 20px;
+    box-shadow: inset 0 0 5px #eee;
+}
