--- a/src/App.scss
+++ b/src/App.scss
@@ -19,7 +19,11 @@ body{
 }
 
 nav{
+    top: 0;
+    left: 0;
+    height: 100vh;
     display: flex;
+    position: sticky;
     flex-direction: column;
     background-color: #f9f9f9;
     box-shadow: inset 0 0 10px #ddd;
