update files structure

--- a/src/components/Card/_style.scss
+++ b/src/components/Card/_style.scss
@@ -1,6 +1,6 @@
 .cv-card {
-  margin: 20px;
   padding: 10px;
+  margin: 20px 20px 0;
   box-shadow: 0 0 10px #ddd;
   background-color: #fff;
   flex: 1;
