--- a/src/App.scss
+++ b/src/App.scss
@@ -45,6 +45,7 @@ nav{
     display: flex;
     flex-wrap: wrap;
     background-color: #f9f9f9;
+    padding-bottom: 20px;
     margin-bottom: 20px;
     box-shadow: inset 0 0 5px #eee;
 }
