--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,7 +11,12 @@
 @import "animation";
 
 // button
-@import "../components/Button/style";
+@import "../packages/Button/style";
+// icon
+@import "../packages/Icon/style";
+// Alert
+@import "../packages/Alert/style";
+
 
 // card
 @import "../components/Card/style";
@@ -21,3 +26,5 @@
 
 // table
 @import "../components/Table/style";
+
+
