add Input component

--- a/src/components/Code/_style.scss
+++ b/src/components/Code/_style.scss
@@ -21,6 +21,7 @@
     display: block;
     margin: 10px auto;
     cursor: pointer;
+    outline: none;
     background-color: transparent;
     &:hover{
         color: #666;
