--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -54,9 +54,9 @@ $font-size-root:              null !default;
 
 $theme-sizes: 
 (
-  "large":   $font-size-lg,
+  "lg":   $font-size-lg,
   "normal":  $font-size-base,
-  "mini":    $font-size-sm,
+  "sm":    $font-size-sm,
 );
 
 // 字重
