--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,14 +10,6 @@
 // animation
 @import "animation";
 
-// button
-@import "../packages/Button/style";
-// icon
-@import "../packages/Icon/style";
-// Alert
-@import "../packages/Alert/style";
-
-
 // card
 @import "../components/Card/style";
 
@@ -26,5 +18,14 @@
 
 // table
 @import "../components/Table/style";
+
+// button
+@import "../packages/Button/style";
+// icon
+@import "../packages/Icon/style";
+// Alert
+@import "../packages/Alert/style";
+// input
+@import "../packages/Input/style";
 
 
