--- a/src/App.scss
+++ b/src/App.scss
@@ -27,13 +27,16 @@ nav{
     flex-direction: column;
     background-color: #f9f9f9;
     box-shadow: inset 0 0 10px #ddd;
-    .nav-link{
+    a.nav-link{
         cursor: pointer;
         padding: 10px 20px;
         border-bottom: 1px solid #eee;
         &.link-active{
             color: #fff;
             background-color: lighten($primary, 3%);
+            &:hover{
+                color: #fff;
+            }
         }
         &:hover{
             opacity: .89;
