--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -27,5 +27,7 @@
 @import "../packages/Alert/style";
 // input
 @import "../packages/Input/style";
+// progress
+@import "../packages/Progress/style";
 
 
