--- a/src/styles/_reboot.scss
+++ b/src/styles/_reboot.scss
@@ -365,6 +365,7 @@ select,
 optgroup,
 textarea {
   margin: 0;
+  outline: 0;
   font-family: inherit;
   font-size: inherit;
   line-height: inherit;
