--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -29,5 +29,7 @@
 @import "../packages/Input/style";
 // progress
 @import "../packages/Progress/style";
+// select
+@import "../packages/Select/style";
 
 
