--- a/src/styles/_mixin.scss
+++ b/src/styles/_mixin.scss
@@ -28,7 +28,7 @@
   $color,
   $hover-background: lighten($background, 7.5%),
   $hover-border: lighten($border, 10%),
-  $hover-color: $color,
+  $hover-color: $color
 ) {
   color: $color;
   background: $background;
@@ -46,7 +46,7 @@
   }
   &:active,
   &.active {
-    opacity: .95;
+    opacity: 0.95;
   }
   &:disabled,
   &.disabled {
@@ -64,4 +64,33 @@
 @mixin border-left-radius($raduis) {
   border-top-left-radius: $raduis;
   border-bottom-left-radius: $raduis;
+}
+
+@mixin zoom-animation(
+  $direction: 'top',
+  $scaleStart: scaleY(0),
+  $scaleEnd: scaleY(1),
+  $origin: center top
+) {
+  .zoom-in-#{$direction}-enter {
+    opacity: 0;
+    transform: $scaleStart;
+  }
+  .zoom-in-#{$direction}-enter-active {
+    opacity: 1;
+    transform: $scaleEnd;
+    transition: transform 300ms cubic-bezier(0.23, 1, 0.32, 1) 100ms,
+      opacity 300ms cubic-bezier(0.23, 1, 0.32, 1) 100ms;
+    transform-origin: $origin;
+  }
+  .zoom-in-#{$direction}-exit {
+    opacity: 1;
+  }
+  .zoom-in-#{$direction}-exit-active {
+    opacity: 0;
+    transform: $scaleStart;
+    transition: transform 300ms cubic-bezier(0.23, 1, 0.32, 1) 100ms,
+      opacity 300ms cubic-bezier(0.23, 1, 0.32, 1) 100ms;
+    transform-origin: $origin;
+  }
 }
