--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -31,5 +31,7 @@
 @import "../packages/Progress/style";
 // select
 @import "../packages/Select/style";
+// autoComplete
+@import "../packages/AutoComplete/style";
 
 
