add Menu component

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -33,5 +33,7 @@
 @import "../packages/Select/style";
 // autoComplete
 @import "../packages/AutoComplete/style";
+// menu
+@import "../packages/Menu/style";
 
 
