--- a/src/App.scss
+++ b/src/App.scss
@@ -94,9 +94,9 @@ nav {
   flex-wrap: wrap;
   background-color: #f9f9f9;
   padding: 0 10px 20px;
-  margin-bottom: 20px;
+  margin: 20px auto;
   box-shadow: inset 0 0 5px #eee;
-  max-width: 800px;
+  max-width: calc(100vw - 20px);
 }
 
 .cv-example-input {
