add Tabs component

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -35,5 +35,7 @@
 @import "../packages/AutoComplete/style";
 // menu
 @import "../packages/Menu/style";
+// tabs
+@import "../packages/Tabs/style";
 
 
