--- a/src/App.scss
+++ b/src/App.scss
@@ -31,6 +31,9 @@ body {
     animation: breath 10s infinite linear;
   }
   & > nav {
+    .home-link{
+      display: none;
+    }
     display: flex;
     align-items: center;
     justify-content: center;
@@ -72,6 +75,18 @@ nav {
   flex-direction: column;
   background-color: #f9f9f9;
   box-shadow: inset 0 0 10px #ddd;
+  .home-link{
+    color: #fff !important;
+    text-align: center;
+    background-color: $primary;
+    padding: 5px 0;
+    opacity: .8;
+    font-size: 24px;
+    cursor: pointer;
+    &:hover{
+      opacity: .85;
+    }
+  }
   a.nav-link {
     cursor: pointer;
     padding: 10px 20px;
